--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/SponsorPage.razor
@@ -28,9 +28,9 @@
                     @(I18n.T("Support the development of Swashbuckler Diary"))
                 </MCardTitle>
                 <MCardText Style="text-indent: 2em;">
-                    <MMarkdownIt Source="@whyDevelopDescription"
-                                 Class="user-select">
-                    </MMarkdownIt>
+                    <SimpleMarkdownPreview Class="user-select text-body-2 text--secondary" 
+                                           Value="@whyDevelopDescription">
+                    </SimpleMarkdownPreview>
                 </MCardText>
             </MCard>
 
