--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor.css
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor.css
@@ -1,3 +1,7 @@
-﻿::deep .vditor-reset img {
+::deep .vditor-reset {
+    background-color: rgba(var(--m-theme-surface)) !important;
+}
+
+::deep .vditor-reset img {
     cursor: pointer;
 }
