--- a/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/ReadPage.razor
@@ -177,7 +177,7 @@
 
 <DeleteDialog @bind-Visible="showDelete"
               Title="@(I18n.T("Delete a diary"))"
-              Content="@(I18n.T("Please delete carefully, every diary is a precious memory."))"
+              Content="@(I18n.T("Please delete carefully, every diary is a precious memory.Once deleted, it cannot be restored."))"
               OnOK="HandleDelete">
 </DeleteDialog>
 
