--- a/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
+++ b/src/SwashbucklerDiary.Rcl/Layout/MainLayoutBottomNav/MainLayoutBottomNav.razor
@@ -8,6 +8,7 @@
 
 <MBottomNavigation InputValue="Show"
                    Class="@Class"
+                   Style="background-color:initial;"
                    Mandatory="true"
                    App="true">
     @foreach (var item in Items)
