--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementCard.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Achievement/AchievementCard.razor
@@ -27,7 +27,7 @@
                                  Class="rounded-pill"
                                  Color="@ProgressRateColor"
                                  Height="20">
-                    <strong class="@ProgressRateTextColor">
+                    <strong style="color:@(ProgressRateTextColor);">
                         @ProgressRateText
                     </strong>
                 </MProgressLinear>
