--- a/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/DiaryCard/DiaryCardList.razor
@@ -6,7 +6,7 @@
         <CascadingValue Value="options"
                         IsFixed="true">
             <Virtualize Items="InternalValue"
-                        ItemSize="@ItemHeight"
+                        ItemSize="150"
                         Context="item"
                         OverscanCount="30">
                 <DiaryCard @key="item.Id"
