--- a/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/SimpleMarkdownPreview.razor
+++ b/src/SwashbucklerDiary.Rcl/Components/MarkdownPreview/SimpleMarkdownPreview.razor
@@ -4,5 +4,6 @@
                        Class="@Class"
                        Style="@Style"
                        Simple
+                       Patch="Patch"
                        Options="_options">
 </VditorMarkdownPreview>
