--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/About/PrivacyPolicyPage.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/About/PrivacyPolicyPage.razor
@@ -7,7 +7,7 @@
 </MyAppBar>
 
 <ScrollContainer>
-    <MarkdownPreview Value="@content"
-                     Class="user-select">
-    </MarkdownPreview>
+    <SimpleMarkdownPreview Value="@content"
+                           Class="user-select">
+    </SimpleMarkdownPreview>
 </ScrollContainer>
