--- a/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
+++ b/src/SwashbucklerDiary.Rcl/Pages/Mine/Settings/DiaryCardSetting.razor
@@ -14,6 +14,24 @@
             <MListItem>
                 <MListItemIcon>
                     <MIcon>
+                        markdown
+                    </MIcon>
+                </MListItemIcon>
+                <MListItemContent>
+                    @(I18n.T("Markdown"))
+                </MListItemContent>
+                <MListItemAction>
+                    <SettingSwitch @bind-Value="diaryCardMarkdown"
+                                   SettingKey="@nameof(Setting.DiaryCardMarkdown)">
+                    </SettingSwitch>
+                </MListItemAction>
+            </MListItem>
+
+            <MDivider Class="mx-5"></MDivider>
+
+            <MListItem>
+                <MListItemIcon>
+                    <MIcon>
                         mdi:mdi-emoticon-happy-outline
                     </MIcon>
                 </MListItemIcon>
